// Vitest Snapshot v1

exports[`Input component > renders a number input 1`] = `
<div>
  <input
    class="c-fZTBsJ c-fZTBsJ-pHZal-size-md c-fZTBsJ-ikLAKdM-css"
    inputmode="numeric"
    pattern="[0-9]*"
    placeholder="001"
    type="text"
  />
</div>
`;

exports[`Input component > renders a text input 1`] = `
<div>
  <input
    class="c-fZTBsJ c-fZTBsJ-pHZal-size-md c-fZTBsJ-ikLAKdM-css"
    placeholder="INPUT"
    type="text"
  />
</div>
`;
